:white_check_mark: Done background color on youtubr

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                   data-text="Hello World"
                 >
                   <div id="editable-text" contenteditable="true">
-                    ❤️BB Coding is Love❤️
+                    ❤️Coding BB is Love❤️
                   </div>
                 </h3>
               </a>
@@ -179,7 +179,7 @@
                   ></path>
                 </svg>
                 <div class="label">
-                  <span class="name">BB GPT</span>
+                  <span class="name">BB Chat</span>
                   <span class="url">127.0.0.1:7860</span>
                 </div>
               </a>
