:white_check_mark: Final Edit

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                   data-text="Hello World"
                 >
                   <div id="editable-text" contenteditable="true">
-                    ❤️Coding BB is Love❤️
+                    ❤️Torrens University❤️
                   </div>
                 </h3>
               </a>
